<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/activity_background"
    tools:context="my.com.friendsrequest.activities.MainActivity">

    <TextView
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_introduction"
        android:textSize="18sp"
        android:textColor="@color/whiteColor"
        android:textStyle="italic"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/user_id_edit_text"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_id_edit_text"
        android:background="@drawable/edit_text_border"
        android:inputType="number"
        android:layout_gravity="center"
        android:maxLength="9"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/whiteColor"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="italic"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/random_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/random_button"
        android:textColor="@color/whiteColor"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style"/>

    <Button
        android:id="@+id/my_id_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/my_id_button"
        android:textColor="@color/whiteColor"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"/>

    <Button
        android:id="@+id/user_friends_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/get_friends_button"
        android:textColor="@color/whiteColor"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style" />

</LinearLayout>
